Enabled ZGC in build.gradle.